syntax = "proto3";

package vmessocket.core.transport.internet.websocket;
option csharp_namespace = "vmessocket.Core.Transport.Internet.Websocket";
option go_package = "github.com/vmessocket/vmessocket/transport/internet/websocket";
option java_package = "com.vmessocket.core.transport.internet.websocket";
option java_multiple_files = true;

message Header {
  string key = 1;
  string value = 2;
}

message Config {
  reserved 1;
  string path = 2;
  repeated Header header = 3;
  bool accept_proxy_protocol = 4;
  int32 max_early_data = 5;
  bool use_browser_forwarding = 6;
  string early_data_header_name = 7;
}
